[Deployment] Enabling compact object headers